{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 30,
  "lineage": "738a7d1d-0bd1-5f6e-dfa4-13c7ebb363df",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654547956:internet-gateway/igw-0bd80abd9e04387b0",
            "id": "igw-0bd80abd9e04387b0",
            "owner_id": "654654547956",
            "tags": {
              "name": "internetgateway"
            },
            "tags_all": {
              "name": "internetgateway"
            },
            "vpc_id": "vpc-0d292fd17869fc26c"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654547956:loadbalancer/app/alb/f5ae3a6982060a7d",
            "arn_suffix": "app/alb/f5ae3a6982060a7d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-825871982.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654547956:loadbalancer/app/alb/f5ae3a6982060a7d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02da77cf4292e5330"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02ddeea943f8b9099"
              },
              {
                "subnet_id": "subnet-099bf3984331f39f7"
              }
            ],
            "subnets": [
              "subnet-02ddeea943f8b9099",
              "subnet-099bf3984331f39f7"
            ],
            "vpc_id": "vpc-0d292fd17869fc26c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.name",
            "aws_subnet.cust",
            "aws_subnet.name",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654547956:targetgroup/target/3c51727dbc69ed05",
            "arn_suffix": "targetgroup/target/3c51727dbc69ed05",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654547956:targetgroup/target/3c51727dbc69ed05",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d292fd17869fc26c"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654547956:route-table/rtb-0264822aa84f5fe9b",
            "id": "rtb-0264822aa84f5fe9b",
            "owner_id": "654654547956",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd80abd9e04387b0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "route1"
            },
            "tags_all": {
              "name": "route1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d292fd17869fc26c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.name",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nam",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cb93701c9ff1479",
            "route_table_id": "rtb-0264822aa84f5fe9b",
            "subnet_id": "subnet-02ddeea943f8b9099"
          },
          "dependencies": [
            "aws_internet_gateway.name",
            "aws_route_table.name",
            "aws_subnet.name",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc948c1c15e71641",
            "route_table_id": "rtb-0264822aa84f5fe9b",
            "subnet_id": "subnet-099bf3984331f39f7"
          },
          "dependencies": [
            "aws_internet_gateway.name",
            "aws_route_table.name",
            "aws_subnet.cust",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654547956:security-group/sg-02da77cf4292e5330",
            "description": "allow ssh traffic",
            "egress": [],
            "id": "sg-02da77cf4292e5330",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "secugrp",
            "name_prefix": "",
            "owner_id": "654654547956",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d292fd17869fc26c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cust",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654547956:subnet/subnet-099bf3984331f39f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099bf3984331f39f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654547956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "pubsu2"
            },
            "tags_all": {
              "name": "pubsu2"
            },
            "vpc_id": "vpc-0d292fd17869fc26c"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654547956:subnet/subnet-02ddeea943f8b9099",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ddeea943f8b9099",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654547956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "pubsub1"
            },
            "tags_all": {
              "name": "pubsub1"
            },
            "vpc_id": "vpc-0d292fd17869fc26c"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654547956:vpc/vpc-0d292fd17869fc26c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/18",
            "default_network_acl_id": "acl-02cd3fdae46057d78",
            "default_route_table_id": "rtb-0a56e3438f3dcbd07",
            "default_security_group_id": "sg-0a656e5452c7cd14d",
            "dhcp_options_id": "dopt-0b65e9be6fdc6a594",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d292fd17869fc26c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a56e3438f3dcbd07",
            "owner_id": "654654547956"
          }
        }
      ]
    }
  ]
}